--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>yaorongke</title>
+    <title>weichi-ys</title>
 </head>
 <body>
-    <h1>yaorongke的个人主页</h1>
+    <h1>weichi-ys的个人主页</h1>
     <h1>Hello ~</h1>
 </body>
 </html>
